--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -13,4 +13,5 @@ some reason and we need to fill it out vertically-->
 
     <!-- list item -->
     <dimen name="list_item_long_horizontal_padding">104dp</dimen>
+    <item name="text_change_amt_column_weight" type="dimen" format="integer">4</item>
 </resources>
