--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <!--stock up or down colors-->
     <color name="stock_up_green">#0ec24d</color>
     <color name="stock_down_red">#ff0000</color>
+    <color name="stock_neutral">#727272</color>
 
     <!--Detail Fragment extra colors -->
     <color name="detail_extras_background">#2e4134</color>
