updateTime now shows in first_item.
Also fixed a ui bug: If the search was open w/o focus and the user
changed orientation, the logo would cover the search box. This is now
fixed.

--- a/app/src/main/res/layout/detail_main_section_center_vertical.xml
+++ b/app/src/main/res/layout/detail_main_section_center_vertical.xml
@@ -17,7 +17,7 @@
         app:columnCount="2">
 
         <TextView
-            android:id="@+id/text_date_updated"
+            android:id="@+id/text_update_time"
             android:layout_width="0dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif"
