--- a/app/src/main/res/values/refs.xml
+++ b/app/src/main/res/values/refs.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="layout" name="fragment_detail_ref">@layout/fragment_detail</item>
+    <item type="string" name="update_time_format_ref">@string/update_time_format</item>
 </resources>
