--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#18d886</color>
     <color name="colorPrimaryDark">#12a868</color>
-    <color name="colorAccent">#eeff41</color>
+    <color name="colorAccent">#18d886</color>
 
     <color name="secondary_text">#727272</color>
     <color name="white">#ffffff</color>
