--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,5 @@
     <dimen name="list_item_vertical_padding">10dp</dimen>
     <dimen name="list_item_horizontal_padding">@dimen/list_item_vertical_padding</dimen>
     <item name="text_change_amt_column_weight" type="dimen" format="integer">5</item>
+    <dimen name="progress_wheel_size">40dp</dimen>
 </resources>
