--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,8 +7,7 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
-    <item
-        android:id="@+id/action_sort"
+    <item android:id="@+id/action_sort"
         android:title="@string/action_sort"
         android:orderInCategory="101"
         app:showAsAction="never"/>
