--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="list_item_first_main_info_text_size">28sp</dimen>
 
     <!--detail fragment-->
+    <dimen name="detail_extras_section_progress_retry_margin">0dp</dimen>
     <item name="detail_center_vertical" type="dimen" format="boolean">true</item>
 
     <!-- On devices < sw360dp scrollview generates this whitespace on bottom of screen for
