--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,7 @@
     <dimen name="detail_extras_section_top_padding">15dp</dimen>
     <dimen name="detail_extras_section_bottom_padding">25dp</dimen>
     <dimen name="detail_extras_section_horizontal_padding">20dp</dimen>
+    <dimen name="detail_extras_section_progress_retry_margin">64dp</dimen>
     <item name="detail_center_vertical" type="dimen" format="boolean">false</item>
     <!--End Detail fragment-->
 
