Started widget code, fixed minor bugs
* Fixed a threading bug where the event bus queue would interfere with the
initLoadDb().

--- a/app/src/main/res/layout/activity_main_recycler_view.xml
+++ b/app/src/main/res/layout/activity_main_recycler_view.xml
@@ -28,5 +28,5 @@
         android:layout_height="@dimen/progress_wheel_size"
         android:layout_gravity="center"
         android:indeterminate="true"
-        android:visibility="visible"/>
+        android:visibility="invisible"/>
 </FrameLayout>
