--- a/app/src/main/res/layout/widget_loading.xml
+++ b/app/src/main/res/layout/widget_loading.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <include layout="@layout/widget_logo"/>
-
+    android:layout_height="@dimen/widget_list_item_estimated_height">
     <ProgressBar
         android:id="@+id/progress_wheel"
         android:layout_width="@dimen/progress_wheel_size"
