--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,13 +39,19 @@
 
     <!--list_item-->
     <dimen name="list_item_vertical_padding">10dp</dimen>
-    <dimen name="list_item_horizontal_padding">@dimen/list_item_vertical_padding</dimen>
+    <dimen name="list_item_horizontal_padding">10dp</dimen>
     <item name="text_change_amt_column_weight" type="dimen" format="integer">5</item>
     <dimen name="progress_wheel_size">40dp</dimen>
+    <!-- For the load items we want them to be the same size as a regular item, but since a regular
+    item is wrap_content we are just going by eye-->
+    <dimen name="list_item_estimated_height">60dp</dimen>
 
-    <!-- widget -->
+    <!-- widget (formula 70dp x n - 30 dp)-->
     <dimen name="widget_min_width">180dp</dimen>
     <dimen name="widget_min_height">@dimen/widget_min_width</dimen>
-    <dimen name="widget_min_resize_width">250dp</dimen>
+    <dimen name="widget_min_resize_width">180dp</dimen>
     <dimen name="widget_min_resize_height">@dimen/widget_min_resize_width</dimen>
+    <dimen name="widget_list_item_padding">10dp</dimen>
+    <dimen name="widget_list_item_estimated_height">60dp</dimen>
+
 </resources>
