--- a/app/src/main/res/layout/widget_list_item_first.xml
+++ b/app/src/main/res/layout/widget_list_item_first.xml
@@ -7,6 +7,7 @@
     android:paddingTop="@dimen/widget_list_item_padding">
 
     <TextView
+        android:id="@+id/text_update_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
