Added progress wheel and refresh button to widget

--- a/app/src/main/res/layout/detail_extras_section.xml
+++ b/app/src/main/res/layout/detail_extras_section.xml
@@ -138,7 +138,7 @@
 
     <Button
         style="?android:attr/borderlessButtonStyle"
-        android:id="@+id/retry_button"
+        android:id="@+id/button_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/detail_extras_section_progress_retry_margin"
