--- a/app/src/main/res/layout/widget_list_item_load_more.xml
+++ b/app/src/main/res/layout/widget_list_item_load_more.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_list_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/widget_list_item_estimated_height">
 
-    <Button
-        style="?android:attr/borderlessButtonStyle"
-        android:id="@+id/retry_button"
+    <TextView
+        android:id="@+id/button_retry"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:gravity="center"
         android:text="@string/widget_button_load_more" />
 </FrameLayout>
