--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -32,24 +32,22 @@
             android:background="@color/colorPrimary"
             app:hintText="@string/search_hint"/>
 
-        <!-- This view provides a little square used to give the illusion of overlapping
-        by the cardView-->
+        <!-- This view is used to give the illusion of overlapping by the cardView-->
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/details_app_bar_overlap"
             android:background="@color/colorPrimary"
+            android:layout_below="@+id/appBar"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/appBar" />
+            android:layout_alignParentStart="true" />
 
         <include
             layout="@layout/activity_main_card_view"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="@dimen/card_view_height"
             android:layout_below="@+id/appBar"
             android:layout_marginLeft="@dimen/card_view_horizontal_margin"
-            android:layout_marginRight="@dimen/card_view_horizontal_margin"
-            tools:layout_height="360dp"/>
+            android:layout_marginRight="@dimen/card_view_horizontal_margin" />
 
         <include layout="@layout/activity_main_recycler_view"
             android:layout_width="match_parent"
