--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Values for the cardView detail view in tablets-->
+    <dimen name="card_view_horizontal_margin">24dp</dimen>
+    <dimen name="card_view_vertical_margin">0dp</dimen>
+
     <!--list_item-->
     <dimen name="list_item_horizontal_padding">@dimen/list_item_vertical_padding</dimen>
 </resources>
