--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!-- 7 inch tablet and above-->
     <!-- Values for the cardView detail view in tablets-->
     <dimen name="details_app_bar_overlap">24dp</dimen>
     <dimen name="detail_card_elevation">6dp</dimen>
 
-    <dimen name="card_view_horizontal_margin">24dp</dimen>
-    <dimen name="card_view_vertical_margin">12dp</dimen>
+    <dimen name="card_view_horizontal_margin">0dp</dimen>
+    <dimen name="card_view_height">360dp</dimen>
 
     <!--list_item-->
     <dimen name="list_item_vertical_padding">15dp</dimen>
