--- a/app/src/main/res/values-sw720dp-land/dimens.xml
+++ b/app/src/main/res/values-sw720dp-land/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Values for the cardView detail view in tablets-->
+    <dimen name="card_view_horizontal_margin">64dp</dimen>
+    <dimen name="card_view_vertical_margin">32dp</dimen>
+
     <!-- list item -->
     <dimen name="list_item_horizontal_padding">80dp</dimen>
 </resources>
