Added polish to the visibility of cardView.
* CardView shows first item when db is dont loading
* CardView shows first item when done refreshing.
* CardView shows the that was added automatically.
* CardView shows the item that was clicked on in the widget.

--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.mcochin.stockstreaks.custom.LogoTextView
+        <com.mcochin.stockstreaks.custom.CustomFontTextView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="?attr/listPreferredItemHeight"
