--- a/app/src/main/res/layout-sw360dp/fragment_detail.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_detail.xml
@@ -18,5 +18,5 @@
     <include layout="@layout/detail_extras_section"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".9"/>
+        android:layout_weight="1"/>
 </LinearLayout>
