--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.mcochin.stockstreaks.custom.LogoTextView
+        <com.mcochin.stockstreaks.custom.CustomFontTextView
             android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="?attr/listPreferredItemHeight"
