Small bug fixes. See details.
* Clicking undo now removes the empty msg
* Removing an item with its card data shown will also remove the card
 view.
* onLoadDb's cardview load will no longer overwrite the onCreate intent
cardView.
* Fixed Update Time formatting
* Fixed pending intents from widgets from not working correctly.

--- a/app/src/main/res/layout/detail_main_section.xml
+++ b/app/src/main/res/layout/detail_main_section.xml
@@ -27,7 +27,7 @@
             android:textColor="@color/secondary_text"
             app:layout_columnSpan="2"
             app:layout_columnWeight="1"
-            tools:text="Updated: Thursday, April 03 @ 4:00pm" />
+            tools:text="@string/update_time_format_wide" />
 
         <TextView android:id="@+id/text_full_name"
             android:layout_width="0dp"
