--- a/app/src/main/res/layout/activity_main_card_view.xml
+++ b/app/src/main/res/layout/activity_main_card_view.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/detail_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:cardElevation="@dimen/detail_card_elevation">
 
 </android.support.v7.widget.CardView>
