--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 <resources>
     <!-- Logo -->
     <dimen name="logo_font_size">36dp</dimen>
+    <dimen name="widget_logo_font_size">26dp</dimen>
     <dimen name="app_bar_height">68dp</dimen>
 
     <!--Appbar for phones-->
@@ -44,7 +45,7 @@
     <dimen name="list_item_estimated_height">60dp</dimen>
 
     <!-- widget (formula 70dp x n - 30 dp)-->
-    <dimen name="widget_min_width">250dp</dimen>
+    <dimen name="widget_min_width">320dp</dimen>
     <dimen name="widget_min_height">110dp</dimen>
     <dimen name="widget_min_resize_width">@dimen/widget_min_width</dimen>
     <dimen name="widget_min_resize_height">@dimen/widget_min_height</dimen>
