Implemented Analytics and Activity Transitions

--- a/app/src/main/res/layout/detail_extras_section.xml
+++ b/app/src/main/res/layout/detail_extras_section.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/detail_extras_section"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:paddingTop="@dimen/detail_section_vertical_padding"
@@ -13,7 +14,7 @@
     android:background="@color/detail_extras_background">
 
     <android.support.v7.widget.GridLayout
-        android:id="@+id/detail_extras_section"
+        android:id="@+id/detail_extras_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
