--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.Detail">
+        <item name="android:windowEnterTransition">@transition/detail_enter_transition</item>
+    </style>
 
     <!-- list_item_first.xml TextView style -->
     <style name="ListItemFirstTextLarge">
