--- a/app/src/main/res/layout/list_item_first.xml
+++ b/app/src/main/res/layout/list_item_first.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:background="@color/white"
+        android:focusable="true"
         app:columnCount="2">
 
         <TextView
