--- a/app/src/main/res/layout/widget_list_item_load_more.xml
+++ b/app/src/main/res/layout/widget_list_item_load_more.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
+    style="?android:attr/borderlessButtonStyle"
     android:id="@+id/widget_list_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/widget_list_item_estimated_height">
-
-    <TextView
-        android:id="@+id/button_retry"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:text="@string/widget_button_load_more" />
-</FrameLayout>
+    android:layout_height="@dimen/widget_list_item_estimated_height"
+    android:textColor="@color/black"
+    android:gravity="center"
+    android:text="@string/widget_button_load_more"
+    android:focusable="true"/>
